lab1_nodos_topicos_mensajes/log/build_2025-05-06_13-29-35/lab1_nodos_topicos_mensajes/stdout_stderr.log
running egg_info
creating build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info
writing build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/PKG-INFO
writing dependency_links to build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/dependency_links.txt
writing entry points to build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/entry_points.txt
writing requirements to build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/requires.txt
writing top-level names to build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/top_level.txt
writing manifest file 'build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/SOURCES.txt'
reading manifest file 'build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/SOURCES.txt'
writing manifest file 'build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info/SOURCES.txt'
running build
running build_py
creating /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build
creating /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib
creating /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib/lab1_nodos_topicos_mensajes
copying lab1_nodos_topicos_mensajes/__init__.py -> /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib/lab1_nodos_topicos_mensajes
copying lab1_nodos_topicos_mensajes/nodo_simple.py -> /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib/lab1_nodos_topicos_mensajes
running install
running install_lib
creating /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes
copying /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib/lab1_nodos_topicos_mensajes/__init__.py -> /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes
copying /home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/build/lib/lab1_nodos_topicos_mensajes/nodo_simple.py -> /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes
byte-compiling /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes/nodo_simple.py to nodo_simple.cpython-312.pyc
running install_data
creating /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/share/ament_index
  File "/home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes/nodo_simple.py", line 16
    def __name__ == "__main__":
                 ^^
SyntaxError: expected '('

creating /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/share/ament_index/resource_index
creating /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/share/ament_index/resource_index/packages
copying resource/lab1_nodos_topicos_mensajes -> /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/share/ament_index/resource_index/packages
copying package.xml -> /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/share/lab1_nodos_topicos_mensajes
running install_egg_info
Copying build/lab1_nodos_topicos_mensajes/lab1_nodos_topicos_mensajes.egg-info to /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/python3.12/site-packages/lab1_nodos_topicos_mensajes-0.0.0-py3.12.egg-info
running install_scripts
Installing nodo_simple script to /home/sguajardo/lab1_nodos_topicos_mensajes/install/lab1_nodos_topicos_mensajes/lib/lab1_nodos_topicos_mensajes
writing list of installed files to '/home/sguajardo/lab1_nodos_topicos_mensajes/build/lab1_nodos_topicos_mensajes/install.log'
